unpackaged/main/default/objects/ETT_Staging_Customer_LPO__c/ETT_Staging_Customer_LPO__c.object-meta.xml
<CustomObject>
    <label>Staging Customer LPO</label>
    <nameField>
        <displayFormat>SCLPO-{0000}</displayFormat>
        <label>Staging Customer LPO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Customer LPO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>