unpackaged/main/default/objects/ETT_Staging_Customer_LPO__c/fields/ETT_Lead__c.field-meta.xml
<CustomField>
    <fullName>ETT_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Staging Customer LPO</relationshipLabel>
    <relationshipName>Staging_Customer_LPO</relationshipName>
    <type>Lookup</type>
</CustomField>